--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cis2348</groupId>
-    <artifactId>Homework3 Starter</artifactId>
+    <artifactId>Homework3-Starter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <flyway.version>4.0.3</flyway.version>
+        <database.url>jdbc:sqlite:hm3.db</database.url>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -30,12 +34,29 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.3.173</version>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.16.1</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>${flyway.version}</version>
+                <configuration>
+                    <sqlMigrationSeparator>__</sqlMigrationSeparator>
+                    <locations>
+                        <location>filesystem:src/main/resources/db/migration</location>
+                    </locations>
+                    <url>${database.url}</url>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
